--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,4 +9,4 @@ sonar.java.source=1.8
 sonar.java.target=1.8
 
 sonar.sourceEncoding=UTF-8
-sonar.java.binaries=./target/classes
+sonar.java.binaries=./cynomys-common/src/test/java/cn/howardliu/monitor/cynomys/common
